--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -75,6 +75,14 @@
       <div class="form-group">
         <select class="form-control" ng-model="condition.status">
           <option value="">状态</option>
+          <option value="新建">新建</option>
+          <option value="初始资料">初始资料</option>
+          <option value="首次催单">首次催单</option>
+          <option value="二次催单">二次催单</option>
+          <option value="搁置">搁置</option>
+          <option value="录入">录入</option>
+          <option value="完成">完成</option>
+          <option value="上线">上线</option>
         </select>
       </div>
       <div class="form-group">
@@ -109,7 +117,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       项目
-      <span class="badge">100</span>
+      <span class="badge">{{projectData.count}}</span>
       <button class="btn btn-primary btn-xs pull-right" type="button" data-toggle="modal" data-target="#addModal" data-backdrop="static" ng-click="newProject = null">
         <span class="glyphicon glyphicon-plus"></span>
       </button>
@@ -161,7 +169,9 @@
             </select>
           </span>
         </td>
-        <td>{{p.status}}</td>
+        <td>
+          <div class="label {{p.statusLabel}}">{{p.status}}</div>
+        </td>
         <td ng-click="showEdit($event, p)">
           <span class="view">{{p.supporter.realname}}</span>
           <span class="edit" style="display:none;">
@@ -305,13 +315,28 @@
                     <input type="date" class="form-control" ng-model="p.ec.sendBoxDate" ng-blur="update($event, p, 'ec')">
                   </span>
                 </td>
-                <td>{{p.online.date}}</td>
-                <td>{{p.online.reviewer.name}}</td>
+                <td>{{p.online.date | date:'yyyy-MM-dd'}}</td>
+                <td>{{p.online.reviewer.realname}}</td>
                 <td ng-click="showEdit($event, p)" colspan="3">
                   <span class="view" ng-bind-html="p.memo | wrap"></span>
                   <span class="edit" style="display:none;">
                     <textarea class="form-control" ng-model="p.memo" ng-blur="update($event, p, 'memo')"></textarea>
                   </span>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="6">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <button class="btn btn-default" ng-disabled="p.status != '新建'" ng-click="updateStatus(p, '初始资料')">初始资料</button>->
+                      <button class="btn btn-default" ng-disabled="p.status != '初始资料'" ng-click="updateStatus(p, '首次催单')">首次催单</button>->
+                      <button class="btn btn-default" ng-disabled="p.status != '首次催单'" ng-click="updateStatus(p, '二次催单')">二次催单</button>->
+                      <button class="btn btn-default" ng-disabled="p.status != '二次催单'" ng-click="updateStatus(p, '搁置')">搁置</button>->
+                      <button class="btn btn-default" ng-disabled="['初始资料', '首次催单', '二次催单', '搁置'].indexOf(p.status) == -1" ng-click="updateStatus(p, '录入')">录入</button>->
+                      <button class="btn btn-default" ng-disabled="p.status != '录入'" ng-click="updateStatus(p, '完成')">完成</button>->
+                      <button class="btn btn-default" ng-disabled="p.status != '完成'" ng-click="updateStatus(p, '上线')">上线</button>
+                    </div>
+                  </div>
                 </td>
               </tr>
             </table>
