--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -83,6 +83,7 @@
           <option value="录入">录入</option>
           <option value="完成">完成</option>
           <option value="上线">上线</option>
+          <option value="毁约">毁约</option>
         </select>
       </div>
       <div class="form-group">
@@ -92,6 +93,13 @@
           <option value="服务号">服务号</option>
         </select>
       </div>
+      <div class="form-group">
+        <select class="form-control" ng-model="condition['supporter._id']" ng-options="s._id as s.realname for s in supporters">
+          <option value="">客服</option>
+        </select>
+      </div>
+      <br>
+      <br>
       <div class="form-group">下单时间：</div>
       <div class="form-group">
         <input type="date" class="form-control" ng-model="condition.sOrderDate">
@@ -99,11 +107,6 @@
       <div class="form-group">-</div>
       <div class="form-group">
         <input type="date" class="form-control" ng-model="condition.eOrderDate">
-      </div>
-      <div class="form-group">
-        <select class="form-control" ng-model="condition['supporter._id']" ng-options="s._id as s.realname for s in supporters">
-          <option value="">客服</option>
-        </select>
       </div>
       <br>
       <br>
@@ -118,7 +121,7 @@
     <div class="panel-heading">
       项目
       <span class="badge">{{projectData.count}}</span>
-      <button class="btn btn-primary btn-xs pull-right" type="button" data-toggle="modal" data-target="#addModal" data-backdrop="static" ng-click="newProject = null">
+      <button class="btn btn-primary btn-xs pull-right" type="button" data-toggle="modal" data-target="#addModal" data-backdrop="static" ng-click="newProject = null" ng-show="['leader', 'admin'].indexOf(userinfo.role) != -1">
         <span class="glyphicon glyphicon-plus"></span>
       </button>
       <div class="clearfix"></div>
@@ -172,7 +175,7 @@
         <td>
           <div class="label {{p.statusLabel}}">{{p.status}}</div>
         </td>
-        <td ng-click="showEdit($event, p)">
+        <td ng-click="userinfo.role != 'supporter' && showEdit($event, p)">
           <span class="view">{{p.supporter.realname}}</span>
           <span class="edit" style="display:none;">
             <select class="form-control" ng-model="p.supporter" ng-options="s as s.realname for s in supporters" ng-blur="update($event, p, 'supporter')">
@@ -324,7 +327,7 @@
                   </span>
                 </td>
               </tr>
-              <tr>
+              <tr ng-hide="userinfo.role == 'finance'">
                 <td colspan="6">
                   <div class="row">
                     <div class="col-sm-12">
