--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -233,9 +233,9 @@
                   </span>
                 </td>
                 <td ng-click="showEdit($event, p)">
-                  <span class="view">{{p.client}}</span>
+                  <span class="view">{{p.client.name}}</span>
                   <span class="edit" style="display:none;">
-                    <input type="text" class="form-control" ng-model="p.client" ng-blur="update($event, p, 'client')">
+                    <typeahead name="client" value-key="name" remote="/api/client?s=%QUERY" model="p.client.name" datum="p.client" ng-blur="update($event, p, 'client')"></typeahead>
                   </span>
                 </td>
               </tr>
@@ -401,7 +401,7 @@
           <div class="form-group">
             <label class="control-label col-sm-2">客户全称</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" ng-model="newProject.client">
+              <typeahead name="client" value-key="name" remote="/api/client?s=%QUERY" model="newProject.client.name" datum="newProject.client"></typeahead>
             </div>
           </div>
           <div class="form-group">
