导出时间用moment处理成格式化字符串 修正upload的路径问题

--- a/views/export.jade
+++ b/views/export.jade
@@ -21,6 +21,6 @@ html
                     td= p.sales.name
                     td= p.company.name
                     td= p.area.name
-                    td= p.orderDate
-                    td= p.online.date
+                    td= moment(p.orderDate).format('YYYY-MM-DD')
+                    td= moment(p.online.date).format('YYYY-MM-DD')
                     td= p.status
