--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -1,3 +1,9 @@
+<style>
+    .deadline {
+        background-color: #d9534f;
+    }
+</style>
+
 <nav class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
@@ -88,12 +94,13 @@
             <select class="form-control" ng-model="condition.status">
                 <option value="">状态</option>
                 <option value="新建">新建</option>
-                <option value="初始资料">初始资料</option>
                 <option value="首次催单">首次催单</option>
                 <option value="二次催单">二次催单</option>
+                <option value="初始资料">初始资料</option>
                 <option value="搁置">搁置</option>
                 <option value="录入">录入</option>
                 <option value="完成">完成</option>
+                <option value="一次修改">一次修改</option>
                 <option value="上线">上线</option>
                 <option value="毁约">毁约</option>
             </select>
@@ -148,6 +155,7 @@
     <th>#</th>
     <th>项目名</th>
     <th>项目类型</th>
+    <th>模板</th>
     <th>分公司</th>
     <th>销售</th>
     <th>行业</th>
@@ -156,7 +164,7 @@
     <th>标签</th>
     <th></th>
 </tr>
-<tr ng-repeat-start="p in projectData.list">
+<tr ng-repeat-start="p in projectData.list" ng-class="{deadline: p.deadline}">
     <td>
         <button class="btn btn-xs" ng-click="p.isShowMore = !p.isShowMore">
             <span class="glyphicon"
@@ -174,6 +182,14 @@
           <span class="edit" style="display:none;">
             <select class="form-control" ng-model="p.type" ng-options="t as t.name for t in projectTypes"
                     ng-blur="update($event, p, 'type')">
+            </select>
+          </span>
+    </td>
+    <td ng-click="showEdit($event, p)">
+        <span class="view">{{p.view.name}}</span>
+          <span class="edit" style="display:none;">
+            <select class="form-control" ng-model="p.view" ng-options="v as v.name for v in views"
+                    ng-blur="update($event, p, 'view')">
             </select>
           </span>
     </td>
@@ -358,36 +374,40 @@
                     <td colspan="6">
                         <div class="row">
                             <div class="col-sm-12">
-                                <button class="btn btn-default" ng-disabled="p.status != '新建'"
-                                        ng-click="updateStatus(p, '初始资料')">初始资料
-                                </button>
-                                ->
-                                <button class="btn btn-default" ng-disabled="p.status != '初始资料'"
+                                <button class="btn btn-default" ng-disabled="['leader', 'admin'].indexOf(userinfo.role) == -1 && p.status != '新建'"
                                         ng-click="updateStatus(p, '首次催单')">首次催单
                                 </button>
                                 ->
-                                <button class="btn btn-default" ng-disabled="p.status != '首次催单'"
+                                <button class="btn btn-default" ng-disabled="['leader', 'admin'].indexOf(userinfo.role) == -1 && p.status != '首次催单'"
                                         ng-click="updateStatus(p, '二次催单')">二次催单
                                 </button>
                                 ->
-                                <button class="btn btn-default" ng-disabled="p.status != '二次催单'"
+                                <button class="btn btn-default" ng-disabled="['leader', 'admin'].indexOf(userinfo.role) == -1 && ['新建', '首次催单', '二次催单'].indexOf(p.status) == -1"
+                                        ng-click="updateStatus(p, '初始资料')">初始资料
+                                </button>
+                                ->
+                                <button class="btn btn-default" ng-disabled="['leader', 'admin'].indexOf(userinfo.role) == -1 && p.status != '二次催单'"
                                         ng-click="updateStatus(p, '搁置')">搁置
                                 </button>
                                 ->
                                 <button class="btn btn-default"
-                                        ng-disabled="['初始资料', '首次催单', '二次催单', '搁置'].indexOf(p.status) == -1"
+                                        ng-disabled="['leader', 'admin'].indexOf(userinfo.role) == -1 && ['初始资料', '搁置'].indexOf(p.status) == -1"
                                         ng-click="updateStatus(p, '录入')">录入
                                 </button>
                                 ->
-                                <button class="btn btn-default" ng-disabled="p.status != '录入'"
+                                <button class="btn btn-default" ng-disabled="['leader', 'admin'].indexOf(userinfo.role) == -1 && p.status != '录入'"
                                         ng-click="updateStatus(p, '完成')">完成
                                 </button>
                                 ->
-                                <button class="btn btn-default" ng-disabled="p.status != '完成'"
+                                <button class="btn btn-default" ng-disabled="['leader', 'admin'].indexOf(userinfo.role) == -1 && p.status != '完成'"
+                                        ng-click="updateStatus(p, '一次修改')">一次修改
+                                </button>
+                                ->
+                                <button class="btn btn-default" ng-disabled="['leader', 'admin'].indexOf(userinfo.role) == -1 && ['完成', '一次修改'].indexOf(p.status) == -1"
                                         ng-click="updateStatus(p, '上线')">上线
                                 </button>
                                 ->
-                                <button class="btn btn-default" ng-disabled="['上线', '毁约'].indexOf(p.status) != -1"
+                                <button class="btn btn-default" ng-disabled="['leader', 'admin'].indexOf(userinfo.role) == -1 && ['上线', '毁约'].indexOf(p.status) != -1"
                                         ng-click="updateStatus(p, '毁约')">毁约
                                 </button>
                             </div>
@@ -438,6 +458,15 @@
                         <div class="col-sm-10">
                             <select class="form-control" ng-model="newProject.type"
                                     ng-options="t as t.name for t in projectTypes" required>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2">模板</label>
+
+                        <div class="col-sm-10">
+                            <select class="form-control" ng-model="newProject.view"
+                                    ng-options="v as v.name for v in views" required>
                             </select>
                         </div>
                     </div>
